--- a/src/api/templates/reset_pass_mail.html
+++ b/src/api/templates/reset_pass_mail.html
@@ -39,8 +39,12 @@
         <div style="max-width: 800px; margin: auto;  text-align: justify; text-justify: inter-word;">
             <h1 style="font-family: Arial;">Hi {{ username }}!</h1>
             <p style="font-family: Arial;">
-                You have register to Birracraft, to complete this process we need you to validate the account by clicking in the following link:
-                <a href="{{ protocol }}://{{ domain }}{% url 'activate_user' uidb64=uid token=token %}" target="_blank">Activate it!</a>
+                We recieve a request to reset you password. Click in the following link to do it:
+                <a href="{{ protocol }}://{{ domain }}{% url 'reset_password' uidb64=uid token=token %}" target="_blank">Restablish your password</a>
+                <br></br>
+                If you didn't request a new password, let us know.
+                <br></br>
+                Thank you.
             <p>
         </div>
     </body>
